--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <!-- Home - Wireless Adb -->
     <string name="home_wireless_adb_title"><![CDATA[Start via Wireless debugging]]></string>
-    <string name="home_wireless_adb_description"><![CDATA[On Android 11 or above, you can enable Wireless debugging and start Shizuku directly from your device, without connecting to a computer.<p>Please view the step-by-step guide first.]]></string>
+    <string name="home_wireless_adb_description"><![CDATA[On Android 11 or above, you can enable Wireless debugging and start Shizuku directly from your device, without connecting to a computer.<p>In addition, Shizuku can be started automatically on boot without root if WRITE_SECURE_SETTINGS permission is granted.<p>Please view the step-by-step guide first.]]></string>
     <string name="home_wireless_adb_description_pre_11"><![CDATA[Before Android 11, connecting to a computer is required to enable Wireless debugging.]]></string>
     <string name="home_wireless_adb_view_guide_button">Step-by-step guide</string>
 
@@ -107,13 +107,16 @@ With %1$s, in any terminal app, you can connect to and interact with the shell r
     <string name="settings_user_interface">Appearance</string>
     <string name="settings_black_night_theme">Black night theme</string>
     <string name="settings_black_night_theme_summary">Use the pure black theme if night mode is enabled</string>
-    <string name="settings_startup">Startup</string>
+    <string name="settings_startup">Startup (only one of them can be enabled at a time)</string>
     <string name="settings_translation_contributors">Translation contributors</string>
     <string name="settings_translation">Participate in translation</string>
     <string name="settings_translation_summary">Help us translate %s into your language</string>
     <string name="settings_start_on_boot">Start on boot (root)</string>
     <string name="settings_start_on_boot_summary">For rooted devices, Shizuku is able to start automatically on boot</string>
     <string name="settings_use_system_color">Use system theme color</string>
+    <string name="settings_start_on_boot_wireless">Start on boot (wireless ADB)</string>
+    <string name="settings_start_on_boot_wireless_summary">For rootless devices, Shizuku is able to start automatically on boot</string>
+    <string name="enable_wifi_first">Enable Wi-Fi to proceed</string>
 
     <!-- About -->
     <string name="action_about">About</string>
