--- a/manager/src/main/res/values-pt-rBR/strings.xml
+++ b/manager/src/main/res/values-pt-rBR/strings.xml
@@ -6,10 +6,10 @@
     <string name="home_status_service_version">Versão %2$s, %1$s</string>
     <string name="home_status_service_version_update">Versão %2$s, %1$s&lt;br&lt;Comece novamente para atualizar para a versão %3$s</string>
     <string name="home_adb_title">Comecar conectando-se a um computador</string>
-    <string name="home_adb_description">Para dispositivos sem root, você precisa usar o ADB para iniciar o Shizuku (requer conexão com o computador). Este processo precisa ser repetido sempre que o dispositivo for reiniciado. Por favor, <b><a href=\"%1$s\">Leia a ajuda</a></b>.</string>
-    <string name="home_adb_button_view_help">Leia a ajuda</string>
+    <string name="home_adb_description">Para dispositivos sem root, você precisa usar o ADB para iniciar o Shizuku (requer conexão com o computador). Este processo precisa ser repetido sempre que o dispositivo for reiniciado. Por favor, leia a <b><a href=\"%1$s\">Ajuda</a></b>.</string>
+    <string name="home_adb_button_view_help">Ajuda</string>
     <string name="home_adb_button_view_command">Ver comando</string>
-    <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Existem algumas outras considerações, por favor, confirme se você leu a ajuda primeiro.</string>
+    <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;• Existem algumas outras considerações, por favor, confirme se você leu a Ajuda primeiro.</string>
     <string name="home_adb_dialog_view_command_copy_button">Copiar</string>
     <string name="home_adb_dialog_view_command_button_send">Enviar</string>
     <string name="home_wireless_adb_title">Comecar via Depuração sem fio</string>
@@ -19,7 +19,7 @@
     <string name="dialog_adb_discovery">Procurando serviço de depuração sem fio</string>
     <string name="dialog_adb_discovery_message">Por favor, ative a Depuração sem fio nas Opções do desenvolvedor. A Depuração sem fio é automaticamente desativada quando a rede muda.
 \n
-\nObservação: não desative as Opções do desenvolvedor ou a Depuração USB, ou o Shizuku será interrompido.</string>
+\nObservação: Não desative as Opções do desenvolvedor ou a Depuração USB, ou o Shizuku será interrompido.</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Por favor, tente desativar e ativar a Depuração sem fio se continuar pesquisando.</string>
     <string name="dialog_adb_port">Porta</string>
     <string name="dialog_adb_invalid_port">Porta é um número inteiro que varia de 1 a 65535.</string>
@@ -46,7 +46,7 @@
     <string name="adb_pairing_tutorial_content_steps">Entre nas Opções do desenvolvedor - Depuração sem fio. Toque em Parear dispositivo com código de pareamento, você verá um código de seis dígitos.</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">Digite o código na notificação para concluir o pareamento.</string>
     <string name="adb_pairing_tutorial_content_notification_blocked">O processo de pareamento exige que você interaja com uma notificação do Shizuku. Por favor, permita que Shizuku envie notificações.</string>
-    <string name="adb_pairing_tutorial_content_miui">Os usuários da MIUI podem precisar mudar o estilo de notificação de MIUI para Android. Para isso, acesse as Configurações - Notificações - Área de notificação.</string>
+    <string name="adb_pairing_tutorial_content_miui">Os usuários da MIUI podem precisar mudar o estilo de notificação de MIUI para Android. Para isso, acesse as Configurações - Notificações e barra de status - Área de notificações.</string>
     <string name="adb_pairing_tutorial_content_miui_2">Caso contrário, talvez você não consiga inserir o código de pareamento na notificação.</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">Por favor, observe que a parte esquerda da opção Depuração sem fio é clicável. Tocar nela abrirá uma nova página. Apenas ligar o interruptor à direita está incorreto.</string>
     <string name="adb_pairing_tutorial_content_finish">Volte para Shizuku e inicie o Shizuku.</string>
@@ -54,7 +54,7 @@
     <string name="adb_pairing_tutorial_content_network_limation_not_foreground">‎Alguns sistemas (como a MIUI) não permitem que apps acessem a rede quando não estão visíveis, mesmo que o app use o serviço em primeiro plano como padrão. Por favor, desative os recursos de otimização de bateria para o Shizuku nesses sistemas.</string>
     <string name="home_root_title">Iniciar (necessário root)</string>
     <string name="home_root_description">Além disso, o Shizuku pode ser iniciado automaticamente na inicialização. Caso contrário, verifique se o seu sistema ou ferramentas de terceiros restringiram o Shizuku.&lt;br&gt;Você pode consultar %s.</string>
-    <string name="home_root_description_sui">Se você estiver usando Magisk, você pode tentar %1$s. Para usuários rooteados, ele eventualmente substituirá o Shizuku. Observe que os apps existentes precisam mudar um pouco para usar %2$s.</string>
+    <string name="home_root_description_sui">Se você estiver usando o Magisk, você pode tentar %1$s. Para usuários rooteados, ele eventualmente substituirá o Shizuku. Observe que os apps existentes precisam mudar um pouco para usar %2$s.</string>
     <string name="home_root_button_start">Iniciar</string>
     <string name="home_root_button_restart">Reiniciar</string>
     <string name="home_app_management_title">Gerenciar apps</string>
@@ -69,14 +69,14 @@
     <string name="home_adb_is_limited_title">Você precisa dar um passo a mais</string>
     <string name="home_adb_is_limited_description">O fabricante do seu dispositivo restringiu as permissões ADB e os apps que usam o Shizuku não funcionarão corretamente.
 \n
-\nNormalmente, essa limitação pode ser eliminada ajustando algumas opções nas Opções do desenvolvedor. Por favor, Leia a ajuda para obter detalhes sobre como fazer isso.
+\nNormalmente, essa limitação pode ser eliminada ajustando algumas opções nas Opções do desenvolvedor. Por favor, leia a Ajuda para obter detalhes sobre como fazer isso.
 \n
 \nTalvez seja necessário reiniciar o Shizuku para que está alteração entre em vigor.</string>
     <string name="app_management_dialog_adb_is_limited_title">A permissão ADB é limitada</string>
     <string name="app_management_dialog_adb_is_limited_message">É altamente possível que o fabricante do seu dispositivo limite a permissão ADB.&lt;p&gt;Pode haver uma solução para o seu sistema &lt;b&gt;&lt;a href=\"%1$s\"&gt;neste documento&lt;/a&gt;&lt;/b&gt;.</string>
-    <string name="app_management_item_summary_requires_root">* requer que Shizuku seja executado com root</string>
+    <string name="app_management_item_summary_requires_root">• Requer que Shizuku seja executado com root</string>
     <string name="home_terminal_title">Usar Shizuku em apps de terminal</string>
-    <string name="home_terminal_description">Execute comandos através do Shizuku em apps de terminal que você gosta</string>
+    <string name="home_terminal_description">Execute comandos através do Shizuku em apps de terminal de sua preferência</string>
     <string name="terminal_tutorial_1">Primeiro, exporte os arquivos para onde quiser. Você encontrará dois arquivos, %1$s e %2$s.</string>
     <string name="terminal_tutorial_1_description">Se houver arquivos com o mesmo nome na pasta selecionada, eles serão excluídos.
 \n
@@ -85,7 +85,7 @@
     <string name="terminal_tutorial_2">Depois, use qualquer editor de texto para abrir e editar %1$s.</string>
     <string name="terminal_tutorial_2_description">Por exemplo, se você quiser usar o Shizuku em %1$s, você deve substituir %2$s por %3$s (%4$s é o nome do pacote de %1$s).</string>
     <string name="terminal_tutorial_3">Finalmente, mova os arquivos para algum lugar onde seu app de terminal possa acessar, você poderá usar %1$s para executar comandos através do Shizuku.</string>
-    <string name="terminal_tutorial_3_description">Algumas dicas: conceda permissão de execução para %1$s e adicione-a a %2$s, você poderá usar %1$s diretamente.</string>
+    <string name="terminal_tutorial_3_description">Algumas dicas: Conceda permissão de execução para %1$s e adicione-a a %2$s, você poderá usar %1$s diretamente.</string>
     <string name="rish_description">Com %1$s, em qualquer app de terminal, você pode conectar-se e interagir com o shell executado pelo Shizuku. &lt;p&gt;Sobre o uso detalhado de %1$s, toque para visualizar o documento.</string>
     <string name="settings_title">Configurações</string>
     <string name="settings_language">Idioma</string>
@@ -95,7 +95,7 @@
     <string name="settings_startup">Inicialização</string>
     <string name="settings_translation_contributors">Tradutores deste app</string>
     <string name="settings_translation">Participe da tradução</string>
-    <string name="settings_translation_summary">Ajude-nos a traduzir %s para o seu idioma</string>
+    <string name="settings_translation_summary">Ajude-nos a traduzir o %s para o seu idioma</string>
     <string name="settings_start_on_boot">Iniciar app na inicialização (root)</string>
     <string name="settings_start_on_boot_summary">Para dispositivos com acesso root, o Shizuku é capaz de iniciar automaticamente na inicialização.</string>
     <string name="settings_use_system_color">Usar cor do tema do sistema</string>
