--- a/manager/src/main/res/values-da/strings.xml
+++ b/manager/src/main/res/values-da/strings.xml
@@ -1,2 +1,2 @@
-<?xml version="1.0" encoding="utf-8"?>
+manager/src/main/res/values-da/strings.xml<?xml version="1.0" encoding="utf-8"?>
 <resources></resources>
